--- a/Rcode/length_age_comps/rec_lengths.Rmd
+++ b/Rcode/length_age_comps/rec_lengths.Rmd
@@ -21,7 +21,7 @@ Load in all data sources and organize by Fleet
 4. recfin - WA length and age
 
 Fleets:
-3 - CA_REC *
+3 - CA_REC *need to calculate sample sizes
 6 - OR_REC
 7 - WA_REC
 8 - CA_CPFV (observer program)
@@ -60,6 +60,7 @@ Fleet 3 - CA_REC: Recfin, and Don Pearson data (lengths come with the ages)
 #Problems: recfin data only goes back to 2004, I bet Don Pearson's data goes back to 1979
 #for now, just compare current recfin 2004-2024 to old assessment 2004-2017
 #2020 had only one fish
+All the data for CA_REC fleet was in RecFin - no outside sources were needed
 
 ```{r}
 # Organize length data into bins
@@ -67,7 +68,7 @@ ca_rec_lengths_list <- get_raw_comps(
   data = ca_rec,
   comp_bins = seq(10, 74, 2),
   comp_column_name = "length",
-  input_n_method = "stewart_hamel",
+  input_n_method = "total_samples",
   two_sex_comps = FALSE,
   month = 7,
   fleet = 3,
@@ -114,9 +115,9 @@ ca_lengths_old <- inputs_old$dat$lencomp |>
   )
 
   # Put the long data frames together, filter for all data >= 2004, and bubble plot!
-together <- rbind(ca_lengths_old, ca_rec_lengths_new)
-together <- together[together$year >= 2004,]
-comparison_plot_ca <- together |>
+together_rec <- rbind(ca_lengths_old, ca_rec_lengths_new)
+together_rec <- together_rec[together_rec$year >= 2004,]
+comparison_plot_ca <- together_rec |>
   dplyr::filter(freq > 0) |>
   ggplot2::ggplot(aes(x = year, y = length, col = assessment, size = freq)) +
   ggplot2::geom_point(position = position_dodge(0.5))
@@ -160,15 +161,153 @@ use previous assessment and ignore old recfin data? ask higher powers
 wa_data <- recfin_bio %>% filter(STATE_NAME == "WASHINGTON")
 ```
 
-CA_Observer: CPFV, Melissa Monk, starting in 1987-1999, 2004-2016
+Fleet 8 - CA_Observer: CPFV, Melissa Monk, starting in 1987-1999, 2004-2016
 
 *ask Julia about CRFS data, same thing? But that only goes from 2009 to 2016*
 check the catch data, they used CRFS starting in 2004
 
 ```{r}
+ca_cpfv
+
+# Organize length data into bins
+ca_obs_lengths_list <- get_raw_comps(
+  data = ca_cpfv,
+  comp_bins = seq(10, 74, 2),
+  comp_column_name = "length",
+  input_n_method = "total_samples",
+  two_sex_comps = FALSE,
+  month = 7,
+  fleet = 8,
+  partition = 0,
+  dir = NULL,
+  printfolder = "",
+  verbose = TRUE
+)
+
+# Make it a readable data frame
+ca_obs_lengths <- as.data.frame(ca_obs_lengths_list)
+colnames(ca_obs_lengths) <- gsub("^unsexed\\.", "", colnames(ca_obs_lengths))
+colnames(ca_obs_lengths) <- gsub("^u", "L", colnames(ca_obs_lengths))
+
+# Save
+write.csv(ca_obs_lengths, file.path("C:/Morgan's Stuff/Sebastes_ruberrimus_2025/Data/processed/rec_comps/ca_obs_lengths.csv"))
+
+# Comparison plots for 2004-2024 
+
+  # Read new data
+ca_obs_lengths_new <- read.csv("C:/Morgan's Stuff/Sebastes_ruberrimus_2025/Data/processed/rec_comps/ca_obs_lengths.csv") |>
+  mutate(assessment = "New_Data") |>
+  dplyr::select(year, assessment, L10:L74) |>
+  tidyr::pivot_longer(cols = c(-year, -assessment), names_to = "length", values_to = "freq") |>
+  dplyr::mutate(length = gsub("L", "", length)) |>
+  dplyr::group_by(year) |>
+  dplyr::mutate(
+    freq = freq / sum(freq),
+    length = as.numeric(length),
+  )
+
+  # Read old data
+inputs_old <- r4ss::SS_read(dir = file.path("C:/Morgan's Stuff/Sebastes_ruberrimus_2025", "model", "2017_yelloweye_model_updated_ss3_exe"))
+ca_obs_lengths_old <- inputs_old$dat$lencomp
+ca_obs_lengths_old <- inputs_old$dat$lencomp |>
+  dplyr::filter(fleet == 8) |>
+  mutate(assessment = "Previous") |>
+  dplyr::select(year, assessment, Nsamp, `l10`:`l74`) |>
+  tidyr::pivot_longer(cols = c(-year, -assessment, -Nsamp), names_to = "length", values_to = "freq") |>
+  dplyr::mutate(length = gsub("^l", "", length)) |>
+  dplyr::group_by(year) |>
+  dplyr::mutate(
+    freq = freq / sum(freq),
+    length = as.numeric(length)
+  )
+
+  # Put the long data frames together, filter for all data >= 2004, and bubble plot!
+together_obs <- rbind(ca_obs_lengths_old, ca_obs_lengths_new)
+together_obs <- together_obs[together_obs$year >= 2004,]
+comparison_plot_ca <- together_obs |>
+  dplyr::filter(freq > 0) |>
+  ggplot2::ggplot(aes(x = year, y = length, col = assessment, size = freq)) +
+  ggplot2::geom_point(position = position_dodge(0.5))
+comparison_plot_ca
+
+  #Save plot
+ggsave(plot = comparison_plot_ca, "ca_obs_length_comp_comparisons.png", path = file.path("C:/Morgan's Stuff/Sebastes_ruberrimus_2025", "Rcode", "length_age_comps"))
+
+# Next step is to combine all 2017 CA_obs data with New 2017-2024 data
 
 ```
 
+testing script to try and figure out whats wrong with the early CA_obs data
+
+```{r}
+#bring in old data so we can get nsamps 
+inputs_old <- r4ss::SS_read(dir = file.path("C:/Morgan's Stuff/Sebastes_ruberrimus_2025", "model", "2017_yelloweye_model_updated_ss3_exe"))
+ca_obs_lengths_old <- inputs_old$dat$lencomp
+ca_obs_lengths_old <- inputs_old$dat$lencomp |>
+  dplyr::filter(fleet == 8) |>
+  mutate(assessment = "Previous") |>
+  dplyr::select(year, assessment, Nsamp, `l10`:`l74`)
+
+#remove data older than 2004 so we can bring it in
+ca_obs_lengths_old<-  ca_obs_lengths_old[ca_obs_lengths_old$year>=2004,]
+#also remove 2006...for some reason
+ca_obs_lengths_old<-  ca_obs_lengths_old[ca_obs_lengths_old$year!=2006,]
+  
+# now in the new data, get rid of data newer than 2016
+ca_obs_lengths<-  ca_obs_lengths[ca_obs_lengths$year<=2016,]
+
+
+ca_obs_lengths$input_n <- ca_obs_lengths_old$Nsamp
+
+  # Read new data # with old nsamps
+ca_obs_lengths_new <- ca_obs_lengths |>
+  mutate(assessment = "New_Data") |>
+  dplyr::select(year, assessment, L10:L74) |>
+  tidyr::pivot_longer(cols = c(-year, -assessment), names_to = "length", values_to = "freq") |>
+  dplyr::mutate(length = gsub("L", "", length)) |>
+  dplyr::group_by(year) |>
+  dplyr::mutate(
+    freq = freq / sum(freq),
+    length = as.numeric(length),
+  )
+
+
+  # Read old data
+# inputs_old <- r4ss::SS_read(dir = file.path("C:/Morgan's Stuff/Sebastes_ruberrimus_2025", "model", "2017_yelloweye_model_updated_ss3_exe"))
+# ca_obs_lengths_old <- inputs_old$dat$lencomp
+# ca_obs_lengths_old <- inputs_old$dat$lencomp |>
+#   dplyr::filter(fleet == 8) |>
+#   mutate(assessment = "Previous") |>
+#   dplyr::select(year, assessment, Nsamp, `l10`:`l74`) 
+
+ca_obs_lengths_old <- ca_obs_lengths_old|>
+  tidyr::pivot_longer(cols = c(-year, -assessment, -Nsamp), names_to = "length", values_to = "freq") |>
+  dplyr::mutate(length = gsub("^l", "", length)) |>
+  dplyr::group_by(year) |>
+  dplyr::mutate(
+    freq = freq / sum(freq),
+    length = as.numeric(length)
+  )
+
+
+
+  # Put the long data frames together, filter for all data >= 2004, and bubble plot!
+together_obs <- rbind(ca_obs_lengths_old, ca_obs_lengths_new)
+together_obs <- together_obs[together_obs$year >= 2004,]
+comparison_plot_ca <- together_obs |>
+  dplyr::filter(freq > 0) |>
+  ggplot2::ggplot(aes(x = year, y = length, col = assessment, size = freq)) +
+  ggplot2::geom_point(position = position_dodge(0.5))
+comparison_plot_ca
+
+### This code shows that Nsamps doesnt have any affect on the bubble plots...still dont know why the data is so wrong
+
+#look at the fish in 2006
+
+s <- ca_rec[ca_rec$year==2006,]
+
+#all the fish in 2006 are Retained and were caught on private/rental. so I dont think I am classifying the data wrong, I think the data from RecFin (from 2004-2008) is wrong, or at least different from what 2017 assessment used.
+```
 OR_Observer: ODFW data, starting in 2003
 
 *is this the same thing as ORBS?? Also, do we have lengths from ORFS? I feel like we talked about including them potentially. If so, this is where we should test it*
