--- a/Rcode/length_age_comps/rec_lengths.Rmd
+++ b/Rcode/length_age_comps/rec_lengths.Rmd
@@ -29,7 +29,7 @@ Fleets:
 
 ```{r}
 ## Load in recfin data and format
-recfin_bio <- read_csv("C:/Morgan's Stuff/Sebastes_ruberrimus_2025/Data/raw/confidential/SD501.csv")
+recfin_bio <- read.csv("../../Data/raw/confidential/SD501.csv")
 
   # Rename columns to match nwfsc code inputs
 names(recfin_bio)[names(recfin_bio) == "RECFIN_YEAR"] <- "year"
