--- a/Rcode/length_age_comps/rec_lengths.Rmd
+++ b/Rcode/length_age_comps/rec_lengths.Rmd
@@ -108,7 +108,7 @@ write.csv(ca_rec_lengths, file.path("../../Data/processed/rec_comps/ca_rec_lengt
 # Comparison plots for 2004-2024 showing that the 2017 CA_REC fleet excludes party/charter boats (CPFV)
 
   # Read new data
-ca_rec_lengths_new <- read.csv("C:/Morgan's Stuff/Sebastes_ruberrimus_2025/Data/processed/rec_comps/ca_rec_lengths.csv") |>
+ca_rec_lengths_new <- read.csv("../../Data/processed/rec_comps/ca_rec_lengths.csv") |>
   mutate(assessment = "New_Data") |>
   dplyr::select(year, assessment, L10:L74) |>
   tidyr::pivot_longer(cols = c(-year, -assessment), names_to = "length", values_to = "freq") |>
@@ -192,7 +192,7 @@ write.csv(or_rec_lengths, file.path("../../Data/processed/rec_comps/or_rec_lengt
 # Comparison plots for 2004-2024 showing that the 2017 OR_REC fleet excludes party/charter boats (CPFV)
 
   # Read new data
-or_rec_lengths_new <- read.csv("C:/Morgan's Stuff/Sebastes_ruberrimus_2025/Data/processed/rec_comps/or_rec_lengths.csv") |>
+or_rec_lengths_new <- read.csv("../../Data/processed/rec_comps/or_rec_lengths.csv") |>
   mutate(assessment = "New_Data") |>
   dplyr::select(year, assessment, L10:L74) |>
   tidyr::pivot_longer(cols = c(-year, -assessment), names_to = "length", values_to = "freq") |>
@@ -341,12 +341,12 @@ colnames(ca_obs_lengths) <- gsub("^unsexed\\.", "", colnames(ca_obs_lengths))
 colnames(ca_obs_lengths) <- gsub("^u", "L", colnames(ca_obs_lengths))
 
 # Save
-write.csv(ca_obs_lengths, file.path("C:/Morgan's Stuff/Sebastes_ruberrimus_2025/Data/processed/rec_comps/ca_obs_lengths.csv"))
+write.csv(ca_obs_lengths, file.path("../../Data/processed/rec_comps/ca_obs_lengths.csv"))
 
 # Comparison plots for 2004-2024 
 
   # Read new data
-ca_obs_lengths_new <- read.csv("C:/Morgan's Stuff/Sebastes_ruberrimus_2025/Data/processed/rec_comps/ca_obs_lengths.csv") |>
+ca_obs_lengths_new <- read.csv("../../Data/processed/rec_comps/ca_obs_lengths.csv") |>
   mutate(assessment = "New_Data") |>
   dplyr::select(year, assessment, L10:L74) |>
   tidyr::pivot_longer(cols = c(-year, -assessment), names_to = "length", values_to = "freq") |>
@@ -358,7 +358,7 @@ ca_obs_lengths_new <- read.csv("C:/Morgan's Stuff/Sebastes_ruberrimus_2025/Data/
   )
 
   # Read old data
-inputs_old <- r4ss::SS_read(dir = file.path("C:/Morgan's Stuff/Sebastes_ruberrimus_2025", "model", "2017_yelloweye_model_updated_ss3_exe"))
+inputs_old <- r4ss::SS_read(dir = file.path("../../model/2017_yelloweye_model_updated_ss3_exe"))
 ca_obs_lengths_old <- inputs_old$dat$lencomp
 ca_obs_lengths_old <- inputs_old$dat$lencomp |>
   dplyr::filter(fleet == 8) |>
@@ -383,7 +383,7 @@ comparison_plot_ca <- together_obs |>
 comparison_plot_ca
 
   #Save plot
-ggsave(plot = comparison_plot_ca, "ca_obs_length_comp_comparisons.png", path = file.path("C:/Morgan's Stuff/Sebastes_ruberrimus_2025", "Rcode", "length_age_comps"))
+ggsave(plot = comparison_plot_ca, "ca_obs_length_comp_comparisons.png", path = file.path("../../Rcode/length_age_comps"))
 
 # Next step is to combine all 2017 CA_obs data with New 2017-2024 data
 
@@ -487,12 +487,12 @@ colnames(or_obs_lengths) <- gsub("^u", "L", colnames(or_obs_lengths))
 or_obs_lengths <- or_obs_lengths[or_obs_lengths$year>=2004,]
 
 # Save
-write.csv(or_obs_lengths, file.path("C:/Morgan's Stuff/Sebastes_ruberrimus_2025/Data/processed/rec_comps/or_obs_lengths.csv"))
+write.csv(or_obs_lengths, file.path("../../Data/processed/rec_comps/or_obs_lengths.csv"))
 
 # Comparison plots for 2004-2024, 2023? 
 
   # Read new data
-or_obs_lengths_new <- read.csv("C:/Morgan's Stuff/Sebastes_ruberrimus_2025/Data/processed/rec_comps/or_obs_lengths.csv") |>
+or_obs_lengths_new <- read.csv("../../Data/processed/rec_comps/or_obs_lengths.csv") |>
   mutate(assessment = "New_Data") |>
   dplyr::select(year, assessment, L10:L74) |>
   tidyr::pivot_longer(cols = c(-year, -assessment), names_to = "length", values_to = "freq") |>
@@ -504,7 +504,7 @@ or_obs_lengths_new <- read.csv("C:/Morgan's Stuff/Sebastes_ruberrimus_2025/Data/
   )
 
   # Read old data
-inputs_old <- r4ss::SS_read(dir = file.path("C:/Morgan's Stuff/Sebastes_ruberrimus_2025", "model", "2017_yelloweye_model_updated_ss3_exe"))
+inputs_old <- r4ss::SS_read(dir = file.path("../../model/2017_yelloweye_model_updated_ss3_exe"))
 or_obs_lengths_old <- inputs_old$dat$lencomp
 or_obs_lengths_old <- inputs_old$dat$lencomp |>
   dplyr::filter(fleet == 9) |>
@@ -529,7 +529,7 @@ comparison_plot_or <- together_obs |>
 comparison_plot_or
 
   #Save plot
-ggsave(plot = comparison_plot_or, "or_obs_length_comp_comparisons.png", path = file.path("C:/Morgan's Stuff/Sebastes_ruberrimus_2025", "Rcode", "length_age_comps"))
+ggsave(plot = comparison_plot_or, "or_obs_length_comp_comparisons.png", path = file.path("../../Rcode/length_age_comps"))
 
 # Next step is to combine all 2017 OR_obs data with New 2017-2024 data
 ```
