--- a/Rcode/survey_length_age/nwfscSurvey_vignette.Rmd
+++ b/Rcode/survey_length_age/nwfscSurvey_vignette.Rmd
@@ -212,17 +212,10 @@ raw_age_comps <- raw_age_comps_n_trips |>
     n_samps_per_tow = n_samps / n_tows,
     Nsamp = round(ifelse(n_samps_per_tow < 55, (n_tows + 0.0707 * n_samps), 4.89*n_tows), digits = 2)) |>
   dplyr::select(year, month, fleet, sex, partition, Nsamp, everything(), -n_samps_per_tow, -n_samps, -n_tows) |>
-  write.csv(file.path(dirname(dirname(getwd())), "Rcode", "survey_length_age", "age_unsexed_raw_10_74_yelloweye rockfish_groundfish_slope_and_shelf_combination_survey.csv"))
+  write.csv(file.path(dirname(dirname(getwd())), "Rcode", "survey_length_age", "age_unsexed_raw_0_65_yelloweye rockfish_groundfish_slope_and_shelf_combination_survey.csv"), row.names = FALSE)
 
 # plot_comps(
 #   data = raw_age_comps_n_trips)
-raw_length_comps <- raw_length_comps_n_trips |>
-  left_join(raw_length_comps_n_fish, by = "year") |>
-  dplyr::mutate(
-    n_samps_per_tow = n_samps / n_tows,
-    Nsamp = round(ifelse(n_samps_per_tow < 55, (n_tows + 0.0707*n_samps), 4.89*n_tows), digits = 2)) |>
-  dplyr::select(year, month, fleet, sex, partition, Nsamp, everything(), -n_samps_per_tow, -n_samps, -n_tows) |>
-  write.csv(file.path(dirname(dirname(getwd())), "Rcode", "survey_length_age", "length_cm_unsexed_raw_10_74_yelloweye rockfish_groundfish_slope_and_shelf_combination_survey.csv"), row.names = FALSE)
 ```
 
 ```{r, echo = FALSE, message = FALSE, warning = FALSE}
@@ -272,8 +265,8 @@ one_sex_caal <- caal |>
 
 write.csv(one_sex_caal, file = file.path(dirname(dirname(getwd())), "Data", "processed", "NWFSC.Combo_CAAL", "processed_one_sex_caal.csv"), row.names = FALSE)
 
-PlotMap.fn(
-  dat = catch)
+# PlotMap.fn(
+#   dat = catch)
 ```
 
 ### Weight-Length Relationship
@@ -334,7 +327,8 @@ bioT = pull_bio(
   common_name = "yelloweye rockfish", 
   survey = "Triennial")
 
-bioT <- bioT$length_data # Ian said to use length data
+bioT <- bioT$length_data |>
+  dplyr::filter(Latitude_dd >= 42) # Ian said to use length data
 
 plot_cpue(
   catch = catchT)
@@ -412,7 +406,9 @@ raw_length_comps_n_trips <- get_raw_comps(
     fleet = 10,
     month = 7,
     dir = getwd(),
-    printfolder = "") |>
+    printfolder = "")
+
+raw_length_comps_n_trips <- raw_length_comps_n_trips$unsexed |>
   dplyr::rename(n_tows = input_n)
 
 raw_length_comps_n_fish <- get_raw_comps(
@@ -424,20 +420,22 @@ raw_length_comps_n_fish <- get_raw_comps(
     fleet = 10,
     month = 7, 
     dir = getwd(),
-    printfolder = "") |>
-  dplyr::rename(n_samps = input_n) |>
+    printfolder = "")
+
+raw_length_comps_n_fish <- raw_length_comps_n_fish$unsexed |>
+  dplyr::rename(n_samps = input_n)|>
   dplyr::select(year, n_samps)
 
 raw_length_comps <- raw_length_comps_n_trips |>
   left_join(raw_length_comps_n_fish, by = "year") |>
-  mutate(
+  dplyr::mutate(
     n_samps_per_tow = n_samps / n_tows,
-    Nsamp = ifelse(n_samps_per_n_tows < 55, (n_tows + 0.0707 * n_samps), 4.89*n_tows)
-    ) |>
-  dplyr::select(year, month, fleet, sex, partition, Nsamp, everything(), -n_samps_per_tow)
+    Nsamp = round(ifelse(n_samps_per_tow < 55, (n_tows + 0.0707*n_samps), 4.89*n_tows), digits = 2)) |>
+  dplyr::select(year, month, fleet, sex, partition, Nsamp, everything(), -n_samps_per_tow, -n_samps, -n_tows) |>
+  write.csv(file.path(dirname(dirname(getwd())), "Rcode", "survey_length_age", "length_cm_unsexed_raw_10_74_yelloweye rockfish_groundfish_triennial_shelf_survey.csv"), row.names = FALSE)
 
-plot_comps(
-  data = raw_length_comps_n_trips)
+# plot_comps(
+#   data = raw_length_comps_n_trips)
 ```
 
 ```{r, echo = FALSE, message = FALSE, warning = FALSE}
